--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "empty-project-template",
-  "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "rnpm": {
     "assets": [
@@ -8,19 +7,23 @@
     ]
   },
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "eject": "expo eject"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "publish": "expo eject"
   },
   "dependencies": {
-    "expo": "^31.0.4",
+    "expo-cli": "^2.3.8",
+    "native-base": "^2.8.1",
     "react": "16.5.0",
+    "react-google-login-component": "^0.9.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-chooser": "^1.7.0",
     "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.18.2",
-    "react-select-me": "^1.1.0"
+    "react-select-me": "^1.1.0",
+    "tcomb-form-native": "^0.6.20"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
